--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta nome="viewport" content="width=device-width, inicial" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title> MUSICAS </title>
-    <link rel="stylesheet" href = "style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
-        <img src=""
+        <img src="" 
     </header>
 </body>
+
 </html>
