--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
     <header>
-        <img src="" 
+        <img src="https://static.vecteezy.com/system/resources/previews/001/208/195/non_2x/music-vinyl-record-png.png"
+        class="profile">
+        <h1> MUSICAS </h1>
+        <P> Renan - Geovane</P> 
     </header>
 </body>
 
