--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <title> MUSICAS </title>
+        rel="stylesheet" >
+    <title> Músicas - As Melhores </title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
+        <div>
         <img src="https://static.vecteezy.com/system/resources/previews/001/208/195/non_2x/music-vinyl-record-png.png"
-        class="profile">
-        <h1> MUSICAS </h1>
-        <P> Renan - Geovane</P> 
+        class="profile" alt="imagem de disco de vinil">
+        <div class="texto-centralizado">
+        <h1> Músicas </h1>
+        </div>
+        </div>
     </header>
 </body>
 
