--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         </div>
         </div>
     </header>
+
+        <section class="BB">
+            <img src="https://akamai.sscdn.co/letras/360x360/albuns/c/0/f/3/781443125495.jpg" alt="foto do album" />
+            <ul>
+                <li>Back in black</li>
+                <li>Rock Classico</li>
+                
+            </ul>
+
+        </section>
+
+
 </body>
 
 </html>
