css atualizado junto do html

--- a/index.html
+++ b/index.html
@@ -2,38 +2,35 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta nome="viewport" content="width=device-width, inicial" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" >
-    <title> Músicas - As Melhores </title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <title>Músicas - As Melhores</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <header>
-        <div>
-        <img src="https://static.vecteezy.com/system/resources/previews/001/208/195/non_2x/music-vinyl-record-png.png"
-        class="profile" alt="imagem de disco de vinil">
-        <div class="texto-centralizado">
-        <h1> Músicas </h1>
-        </div>
-        </div>
-    </header>
+  <header class="header">
+    <img
+      src="https://static.vecteezy.com/system/resources/previews/001/208/195/non_2x/music-vinyl-record-png.png"
+      class="profile"
+      alt="imagem de disco de vinil" />
+    <h1>Músicas</h1>
+  </header>
 
-        <section class="BB">
-            <img src="https://akamai.sscdn.co/letras/360x360/albuns/c/0/f/3/781443125495.jpg" alt="foto do album" />
-            <ul>
-                <li>Back in black</li>
-                <li>Rock Classico</li>
-                
-            </ul>
+  <section class="musica-lista">
+    <div class="cartao">
+      <img
+        src="https://akamai.sscdn.co/letras/360x360/albuns/c/0/f/3/781443125495.jpg"
+        alt="Foto do álbum Back in Black"
+        class="BB" />
+      <h3>Back in Black</h3>
+      <p>AC/DC - Rock Clássico</p>
+    </div>
 
-        </section>
-
-
+  </section>
 </body>
 
 </html>
