--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
         </button>
       </a>
 
+<section class = "musicas">
+  <h2>Sugestões de Musicas</h2>
+  <form>
+    <fieldset>
+      <label for="musicas"> Musica:</label>
+      <input type="text" id="musicas" music="musica">
+    </fieldset>
+
+    <fieldset>
+      <label for="email"> Email:</label>
+      <input type= "email" id="email" email="Email">
+    </fieldset>
+    <button type="submit"> Enviar</button>
+
+  </form>
+</section>
+
+
     </div>
 
   </section>
