--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
     <img src="https://static.vecteezy.com/system/resources/previews/001/208/195/non_2x/music-vinyl-record-png.png"
       class="vinil" alt="imagem de disco de vinil" />
     <h1>Músicas</h1>
+    <nav>
+  <ul>
+    <li><a href="#musica-lista">Músicas</a></li>
+    <li><a href="#sugestao">Sugestões</a></li>
+  </ul>
+</nav>
   </header>
-
+<main>
   <section class="musica-lista">
     <div class="cartao">
       <img src="https://m.media-amazon.com/images/I/61sJIfuUSiL._UF1000,1000_QL80_.jpg"
@@ -25,10 +31,10 @@
       <h3>Back in Black</h3>
       <p>AC/DC</p>
       <a href="https://open.spotify.com/intl-pt/track/08mG3Y1vljYA6bvDt4Wqkj?si=4539d9165f364674" target="_blank">
-        <button class="spotify">
+        <figure class="spotify">
           <img src="https://cdn-icons-png.flaticon.com/512/152/152756.png" alt="icone spotify" width="20" height="20">
           Spotify
-        </button>
+        </figure>
       </a>
     </div>
 
@@ -39,46 +45,61 @@
       <h3>Sweet Child O Mine</h3>
       <p>Guns N' Roses</p>
       <a href="https://open.spotify.com/intl-pt/track/7snQQk1zcKl8gZ92AnueZW?si=178e84bc8da3431b" target="_blank">
-        <button class="spotify">
+        <figure class="spotify">
           <img src="https://cdn-icons-png.flaticon.com/512/152/152756.png" alt="icone spotify" width="20" height="20">
           Spotify
-        </button>
+        </figure>
       </a>
     </div>
 
     <div class="cartao">
-      <img
-        src="https://upload.wikimedia.org/wikipedia/pt/thumb/3/3f/Nevermind.jpg/250px-Nevermind.jpg"
+      <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/3/3f/Nevermind.jpg/250px-Nevermind.jpg"
         alt="Foto do album do nirvana" class="nirvana">
       <h3>Smells Like Teen</h3>
       <p>Nirvana</p>
       <a href="https://open.spotify.com/intl-pt/track/4CeeEOM32jQcH3eN9Q2dGj?si=ebcd38081b52445c" target="_blank">
-        <button class="spotify">
+        <figure class="spotify">
           <img src="https://cdn-icons-png.flaticon.com/512/152/152756.png" alt="icone spotify" width="20" height="20">
           Spotify
-        </button>
+        </figure>
       </a>
 
     </div>
 
     <div class="cartao">
-      <img
-        src="https://upload.wikimedia.org/wikipedia/pt/thumb/f/f7/Trooper.jpg/250px-Trooper.jpg"
+      <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/f/f7/Trooper.jpg/250px-Trooper.jpg"
         alt="Foto do album do iron maiden" class="iron">
       <h3>The Trooper</h3>
       <p>Iron Maiden</p>
       <a href="https://open.spotify.com/intl-pt/track/4OROzZUy6gOWN4UGQVaZMF?si=ad2ef56218c44688" target="_blank">
-        <button class="spotify">
+        <figure class="spotify">
           <img src="https://cdn-icons-png.flaticon.com/512/152/152756.png" alt="icone spotify" width="20" height="20">
           Spotify
-        </button>
+        </figure>
       </a>
-
     </div>
 
+  <section class="sugestao">
+    <h2>Sugestões de Musicas</h2>
+    <form>
+      <fieldset>
+        <label for="musicas"> Musica:</label>
+        <input type="text" id="musicas" music="musica">
+      </fieldset>
+
+      <fieldset>
+        <label for="email"> Email:</label>
+        <input type="email" id="email" email="Email">
+      </fieldset>
+      <button type="submit"> Enviar</button>
+
+    </form>
   </section>
+</section>
+</main>
   <footer>
     <p>&copy; 2025 Geovane - Renan • Araraquara - SP</p>
+    <p>Email do Geovane: geovane.halonso.2005@gmail.com <br> Email do Renan: renanqueiroz1464@gmail.com</p>
   </footer>
 </body>
 
